--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "jquery": "^3.6.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.18.0"
   },
